[project]
name = "frpc-cfg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-credentials>=1.0.2",
    "alibabacloud-ecs20140526>=7.0.8",
    "alibabacloud-tea-openapi>=0.3.15",
    "alibabacloud-tea-util>=0.3.13",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "uvicorn>=0.34.3",
]
